# -----------
# SPDX-License-Identifier: MIT
# Copyright (c) 2023 Troy Williams

# uuid:
# author: Troy Williams
# email:  troy.williams@bluebill.net
# date:   2023-01-19
# -----------

[metadata]
name = md_tools
version = 0.0.1
author = Troy Williams
author_email = troy.williams@bluebill.net
license = MIT
description = Tools to help manage links within markdown files.
# url =
# long_description = file: README.md
# long_description_content_type = text/markdown

classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11


[options]
packages = find:
package_dir =
    =src

install_requires =
    click
    rich
    networkx
    matplotlib
    scipy

include_package_data = True
python_requires >= 3.11

# https://setuptools.readthedocs.io/en/latest/userguide/package_discovery.html
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    docs=md_tools.docs:main

